# runtara-tui

./: CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSING.md  README.md
src/: app.rs  main.rs  ui.rs
