[package]
name = "runtara-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for monitoring Runtara instances and images"
license = "AGPL-3.0-or-later"
repository = "https://github.com/runtara/runtara-tui"
publish = false

[[bin]]
name = "runtara-tui"
path = "src/main.rs"

[dependencies]
runtara-management-sdk = "1.2"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# JSON formatting
serde_json = "1"

# Time formatting
chrono = "0.4"

# CLI args
clap = { version = "4", features = ["derive", "env"] }
